manifests/hello-world.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
    app.kubernetes.io/name: hello-world
    dept: devops
    app: hello-world

spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        app.kubernetes.io/name: hello-world
        dept: devops
        app: hello-world

    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/pusher/oauth2_proxy:v3.2.0

        args:
         - --http-address=0.0.0.0:4180
         - --provider=github
         - --email-domain=*
         - --github-org=dcherman-test-organization
         - --upstream=http://127.0.0.1:8000/

        ports:
        - containerPort: 4180

      - name: hello-world
        image: exiges/nodejs-hello-world:1.0.1
        readinessProbe:
          httpGet:
            path: /ready
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 1
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /live
            port: 9000
          initialDelaySeconds: 10
          # Allow sufficient amount of time (180 seconds = periodSeconds * failureThreshold)
          # for the registered shutdown handlers to run to completion.
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
        ports:
        - containerPort: 8000
        - containerPort: 9000

---

# apiVersion: v1
# kind: Service
# metadata:
#  name: hello-world
#  namespace: hello-world
#  labels:
#    app.kubernetes.io/name: hello-world
#    dept: devops
#    app: hello-world
# spec:
#  ports:
#  - port: 80
#    targetPort: 4180
#    name: http
#  selector:
#    app: hello-world
#  type: ClusterIP
