manifests/004-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/name: hello-world
    dept: devops
    app: hello-world
spec:
  ports:
  - port: 4180
    protocol: TCP
  selector:
    app: hello-world
  type: ClusterIP
