manifests/003-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/name: hello-world
    dept: devops
    app: hello-world
  name: hello-world
spec:
  tls:
  - hosts:
    - hello-world.k8s-poc.fdscloud.io

    secretName: hello-world-ingress-cert
  rules:
    - host: hello-world.k8s-poc.fdscloud.io
      http:
        paths:
          - backend:
              serviceName: hello-world
              servicePort: 4180
            path: /
